# cloudtalk-mcp

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  README.md  endpoints.yaml  logging_config.py  pyproject.toml  swagger-cloudtalkapispec.json
cloudtalk_mcp/: __init__.py  client.py  credentials.py  server.py
cloudtalk_mcp/setup/: __init__.py  setup.py  verify.py
tests/: config.py  seed_data.py
