[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudtalk-mcp"
version = "0.1.0"
description = "MCP server for CloudTalk — call center management, agents, contacts, analytics for law firms"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.27.2", "requests>=2.34.2", "python-dotenv>=1.2.2"]

[project.scripts]
cloudtalk-mcp = "cloudtalk_mcp.server:main"
cloudtalk-mcp-setup = "cloudtalk_mcp.setup.setup:main"
cloudtalk-mcp-verify = "cloudtalk_mcp.setup.verify:main"

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "venv", "dist", "build"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
